@@ -13,7 +13,7 @@ $insert.control("table")
 	</tr>
 	<tr>
 		<td width="80">&nbsp;</td>
-		<td>$insert.control("btUpdate") $insert.control("btDelete") $insert.control("btMoveUp") $insert.control("btMoveDown")</td>
+		<td>$insert.control("btUpdate") $insert.control("btDelete") $insert.control("btMoveUp") $insert.control("btMoveDown") $insert.control("btMoveTop") $insert.control("btMoveBtm")</td>
 		<td>&nbsp;</td>
 	</tr>
 </table>
